# metadata-service

./: .env.example  .gitignore  ARTIFACTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: refresh.yml
docs/: capgemini-quickstart.md
docs/prompts/: reverse-etl-activations.md
docs/use-cases/: github-snowflake-dbt.md  reverse-etl-churn-salesforce.md
examples/: README.md  agent_quickstart.py  agent_transcript.md  aliases.example.json  demo.sh  rest_quickstart.sh
examples/dq_middleware/: README.md  policy.toml  run.py
examples/dq_middleware/dq_middleware/: __init__.py  api.py  cli.py  engine.py  snapshot.py
examples/dq_middleware/tests/: conftest.py  test_middleware.py
src/metadata_service/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  pipeline.py
src/metadata_service/api/: __init__.py  main.py  routes.py
src/metadata_service/clients/: __init__.py  _http.py  activations_client.py  dbt_client.py  fivetran_client.py
src/metadata_service/dq/: __init__.py  activation_gate.py  column_lineage.py  drift.py  lineage.py  recommendations.py  status.py
src/metadata_service/extractors/: __init__.py  activations_extractor.py  dbt_extractor.py  fivetran_extractor.py
src/metadata_service/mcp/: __init__.py  server.py  tools.py
src/metadata_service/models/: __init__.py  common.py  dbt.py  fivetran.py  normalized.py
src/metadata_service/normalizers/: __init__.py  activations_normalizer.py  combined_normalizer.py  dbt_normalizer.py  fivetran_normalizer.py
src/metadata_service/storage/: __init__.py  base.py  local_storage.py  s3_storage.py
src/metadata_service/warehouse/: __init__.py  base.py  (+1 more)
tests/: conftest.py  test_activations.py  test_audit_coverage.py  test_audit_fixes.py  test_cleanup.py  test_column_lineage.py  test_combined_metadata.py  test_dbt_client.py  test_dbt_normalizer.py  test_drift.py  test_fivetran_extractor.py  test_fivetran_normalizer.py  test_hardening.py  test_mcp_tools.py  test_recommendations.py  test_warehouse_enrich.py
tests/fixtures/: activations_syncs.json  dbt_catalog.json  dbt_manifest.json  dbt_run_results.json  dbt_sources.json  fivetran_columns.json  fivetran_connections.json  fivetran_schema_config.json
