[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-service"
version = "1.0.0"
description = "Fivetran + dbt Platform metadata service for agentic Data Quality applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Fivetran SE" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    # Pin below Starlette 1.0: its TestClient deprecates httpx in favor of httpx2,
    # which emits a warning under pytest. FastAPI only requires starlette>=0.46.
    "starlette>=0.46,<1.0",
    "uvicorn>=0.29",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
mcp = ["mcp>=1.0"]
# Read authoritative PKs/lineage from the Fivetran Platform Connector's
# fivetran_metadata schema in a Snowflake destination.
warehouse-snowflake = ["snowflake-connector-python>=3.0", "cryptography>=42"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
metadata-service = "metadata_service.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
